# softManager

./: CMakeLists.txt  README.md  build.bat  make_setup.py  release.py  update_downladTool_skin.bat  update_softManager_skin.bat  upload_file.bat
.github/workflows/: build_commit.yml  go.yml  release.yml  test.yml
common/: WndImpl.cpp  WndImpl.h  base64.cpp  base64.h  base_type.h  curl_download_manager.cpp  curl_download_manager.h  curl_download_request.cpp  curl_download_request.h  curl_request.cpp  curl_request.h  define.h  event_queue_global_manager.cpp  event_queue_global_manager.h  file_helper.cpp  file_helper.h  file_read_stream.cpp  file_read_stream.h  helper.cpp  helper.h  kf_log.cpp  kf_log.h  kf_str.cpp  kf_str.h  log_helper.cpp  log_helper.h  md_5.cpp  md_5.h  mp.cpp  mp.h  my_time.cpp  my_time.h  request_helper.cpp  request_helper.h  scheme.cpp  scheme.h  stringHelper.cpp  stringHelper.h
downloadTool/: CMakeLists.txt  add_download_task_window.cpp  add_download_task_window.h  downloadTool.rc  downloadTool.rc.in  main.cpp  main_window.cpp  main_window.h  resource.h
downloadTool/skin/: add_download_task_window.xml  main.xml
softManager/: CMakeLists.txt  SoftListElementUI.cpp  SoftListElementUI.h  UpdateDetection.cpp  UpdateDetection.h  cache_data_helper.cpp  cache_data_helper.h  common_helper.cpp  common_helper.h  installPackageWnd.cpp  installPackageWnd.h  installedWnd.cpp  installedWnd.h  letter_helper.cpp  letter_helper.h  mail.cpp  mail.h  main.cpp  mainWindow.cpp  mainWindow.h  observerMode.h  remote_config.json  softInfo.cpp  softInfo.h  softManager.rc.in  soft_list_operator_node.cpp  soft_list_operator_node.h  thread_pool.cpp  thread_pool.h  track.cpp  track.h  updateWnd.cpp  updateWnd.h  update_main_window.cpp  update_main_window.h  versionHelper.cpp  versionHelper.h
softManager/skin/: installPackageWnd.xml  installedWnd.xml  interface_menu.xml  main.xml  project.dui  updateMainWnd.xml  updateSoftInfoCtrl.xml  updateWnd.xml  wke_window.xml
